--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:dev": "cp deploy/.env_dev .env && vue-cli-service serve"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "register-service-worker": "^1.6.2",
