--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "prettier": "^1.18.2",
-    "sass-loader": "^8.0.0",
+    "vue-ls": "^3.2.1",
     "vue-template-compiler": "^2.6.10",
     "worker-loader": "^2.0.0"
   },
