--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "lodash.get": "^4.4.2",
+    "lodash.pick": "^4.4.0",
     "register-service-worker": "^1.6.2",
     "uid": "0.0.2",
     "vue": "^2.6.10",
@@ -39,6 +41,7 @@
     "prettier": "^1.18.2",
     "vue-ls": "^3.2.1",
     "vue-template-compiler": "^2.6.10",
+    "webpack-theme-color-replacer": "^1.3.3",
     "worker-loader": "^2.0.0"
   },
   "eslintConfig": {
