--- a/packages/ecp-api/package.json
+++ b/packages/ecp-api/package.json
@@ -2,13 +2,17 @@
   "name": "ecp-api",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon -w ./datasets -x node server.js"
   },
   "version": "1.0.0",
   "author": "Bill Xiong <xpchbill8@gmail.com>",
   "private": true,
   "devDependencies": {
     "faker": "^4.1.0",
-    "json-server": "^0.15.1"
+    "json-server": "^0.15.1",
+    "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
