--- a/packages/ecp-app/package.json
+++ b/packages/ecp-app/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
     "register-service-worker": "^1.6.2",
