Add deploy implementation.

--- a/deploy/.env_dev
+++ b/deploy/.env_dev
@@ -1,14 +1,14 @@
-NODE_NAME=ecp-client
+NODE_NAME=ecp-app
 NODE_ENV=development
-VUE_APP_NAME=ecp-client
+VUE_APP_NAME=ecp-app
 HOST=0.0.0.0
 PORT=6002
 BASE_URL=/
 VUE_APP_DOMAIN=localhost
-VUE_APP_SERVER_URL=http://localhost:7099/ecp
-VUE_APP_BROKER_URL=ws://localhost:3000
+VUE_APP_SERVER_URL=http://localhost:6002/ecp
+VUE_APP_BROKER_URL=ws://localhost:3033
 VUE_APP_CLIENT_URL=http://localhost:6002
-VUE_APP_ROOT_API=/api
+VUE_APP_API_URL=http://localhost:3033/rest/v1
 VUE_APP_LOGGER_LEVEL=4
 NGINX_HTTP_SERVER_PORT=7098
 GIT_REPO_SSH_URL=
