--- a/packages/ecp-app/deploy/.env_dev
+++ b/packages/ecp-app/deploy/.env_dev
@@ -1,6 +1,6 @@
-NODE_NAME=ecp-client
+NODE_NAME=ecp-app
 NODE_ENV=development
-VUE_APP_NAME=ecp-client
+VUE_APP_NAME=ecp-app
 HOST=0.0.0.0
 PORT=6002
 BASE_URL=/
