--- a/deploy/.env_dev
+++ b/deploy/.env_dev
@@ -10,5 +10,6 @@ VUE_APP_BROKER_URL=ws://localhost:3033
 VUE_APP_CLIENT_URL=http://localhost:6002
 VUE_APP_API_URL=http://localhost:3033/rest/v1
 VUE_APP_LOGGER_LEVEL=4
+API_SERVER_PORT=3033
 NGINX_HTTP_SERVER_PORT=7098
 GIT_REPO_SSH_URL=
