--- a/packages/ecp-api/package.json
+++ b/packages/ecp-api/package.json
@@ -2,12 +2,14 @@
   "name": "ecp-api",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon -w ./datasets -x node server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon -w ./datasets -x node server.js"
   },
   "version": "1.0.0",
   "author": "Bill Xiong <xpchbill8@gmail.com>",
   "private": true,
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "json-server": "^0.15.1",
     "nodemon": "^2.0.2"
