Add env for ecp-nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ./deploy/.env_dev:/home/node/ecp-api/.env:ro
 
   client-server:
+    env_file: deploy/.env_dev
     environment:
       - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
     build:
