--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   client:
-    env_file: deploy/.env_dev
+    env_file: ./deploy/.env_dev
     build:
       context: ./packages/ecp-app
       dockerfile: Dockerfile
@@ -20,7 +20,7 @@ services:
       - ./deploy/.env_dev:/home/node/ecp-app/.env:ro
 
   api:
-    env_file: deploy/.env_dev
+    env_file: ./deploy/.env_dev
     build:
       context: ./packages/ecp-api
       dockerfile: Dockerfile
@@ -35,7 +35,7 @@ services:
     command: yarn run start
 
   client-server:
-    env_file: deploy/.env_dev
+    env_file: ./deploy/.env_dev
     environment:
       - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
     build:
