--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
   client-server:
     env_file: ./deploy/.env_dev
     environment:
-      - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
+      - NGINX_HTTP_SERVER_PORT=7098
     build:
       context: ./packages/nginx
       dockerfile: Dockerfile
@@ -48,7 +48,7 @@ services:
     depends_on:
       - client
     ports:
-      - '${NGINX_HTTP_SERVER_PORT}:${NGINX_HTTP_SERVER_PORT}'
+      - '7098:7098'
     expose:
-      - ${NGINX_HTTP_SERVER_PORT}
+      - 7098
     command: /bin/bash -c "envsubst '$$NGINX_HTTP_SERVER_PORT' < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
