Modify docker files.

--- a/packages/nginx/nginx-local.template
+++ b/packages/nginx/nginx-local.template
@@ -33,8 +33,8 @@ http {
   }
 
   server {
-    listen ${NGINX_HTTP_SERVER_PORT};
-    listen [::]:${NGINX_HTTP_SERVER_PORT} ipv6only=on;
+    listen 80;
+    listen [::]:80 ipv6only=on;
     # server_name ${NGINX_HTTP_SERVER_HOST};
 
     include  mime.types;
