--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
 
   client-server:
     environment:
-      - NGINX_HTTP_SERVER_PORT=7098
+      - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
     build:
       context: ./packages/nginx
       dockerfile: Dockerfile
@@ -46,8 +46,9 @@ services:
       - ./packages/nginx/nginx-local.template:/etc/nginx/nginx.template
     depends_on:
       - client
+      - api
     ports:
-      - '7098:7098'
+      - '${NGINX_HTTP_SERVER_PORT}:80'
     expose:
-      - 7098
-    command: /bin/bash -c "envsubst '$$NGINX_HTTP_SERVER_PORT' < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
+      - ${NGINX_HTTP_SERVER_PORT}
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
