--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,4 +51,5 @@ services:
       - '${NGINX_HTTP_SERVER_PORT}:80'
     expose:
       - 80
+    network_mode: 'host'
     command: /bin/bash -c "envsubst < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
