--- a/docker-compose copy.yml
+++ b/docker-compose copy.yml
@@ -49,3 +49,7 @@ services:
       - api
     ports:
       - '${NGINX_HTTP_SERVER_PORT}:80'
+    expose:
+      - 80
+    network_mode: 'host'
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
