--- a/packages/nginx/Dockerfile
+++ b/packages/nginx/Dockerfile
@@ -3,3 +3,7 @@ FROM nginx:latest
 COPY --from=billxiong/ecp-app /home/node/ecp-app/dist /etc/nginx/html
 
 RUN rm /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
