--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
 
   client-server:
     environment:
+      - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
     build:
       context: ./packages/nginx
       dockerfile: Dockerfile
@@ -46,4 +47,7 @@ services:
     depends_on:
       - client
     ports:
-      - 3333:80
+      - '${NGINX_HTTP_SERVER_PORT}:80'
+    expose:
+      - 80
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
