--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     depends_on:
       - client
     ports:
-      - '${NGINX_HTTP_SERVER_PORT}:${NGINX_HTTP_SERVER_PORT}'
+      - '${NGINX_HTTP_SERVER_PORT}:80'
     expose:
       - ${NGINX_HTTP_SERVER_PORT}
     command: sh -c "envsubst '$${NGINX_HTTP_SERVER_PORT}' < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
