--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,4 +50,4 @@ services:
       - '${NGINX_HTTP_SERVER_PORT}:80'
     expose:
       - ${NGINX_HTTP_SERVER_PORT}
-    command: sh -c "envsubst '$${NGINX_HTTP_SERVER_PORT}' < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
+    command: sh -c "envsubst \"`env | awk -F = '{printf \" $$%s\", $$1}'`\" < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
