--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,14 +40,9 @@ services:
     build:
       context: ./packages/nginx
       dockerfile: Dockerfile
-    restart: unless-stopped
+    restart: always
     container_name: ecp-nginx
-    volumes:
-      - ./packages/nginx/nginx-local.template:/etc/nginx/nginx.template
     depends_on:
       - client
     ports:
       - '${NGINX_HTTP_SERVER_PORT}:80'
-    expose:
-      - ${NGINX_HTTP_SERVER_PORT}
-    command: sh -c "envsubst \"`env | awk -F = '{printf \" $$%s\", $$1}'`\" < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
