--- a/packages/nginx/Dockerfile
+++ b/packages/nginx/Dockerfile
@@ -1,9 +1,9 @@
 FROM nginx:latest
 
-COPY --from=billxiong/ecp-app /home/node/ecp-app/dist /etc/nginx/html
+COPY --from=billxiong/ecp-app /home/node/ecp-app/dist /usr/share/nginx/html
 
-RUN rm /etc/nginx/conf.d/default.conf
+# RUN rm /etc/nginx/conf.d/default.conf
 
-#EXPOSE 80
+EXPOSE 80
 
-#CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
