Modify nginx configuration.

--- a/packages/nginx/Dockerfile
+++ b/packages/nginx/Dockerfile
@@ -1,8 +1,9 @@
 FROM nginx:latest
 
-COPY --from=billxiong/ecp-app /home/node/ecp-app/dist /usr/share/nginx/html
+COPY --from=billxiong/ecp-app /home/node/ecp-app/dist /etc/nginx/html
+COPY ./nginx-local.template /etc/nginx/nginx.conf
 
-# RUN rm /etc/nginx/conf.d/default.conf
+RUN rm /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
