Modify docker file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       args:
         - API_SERVER_PORT=${API_SERVER_PORT}
     ports:
-      - '3033:3033'
+      - '${API_SERVER_PORT}:${API_SERVER_PORT}'
     image: billxiong/ecp-api
     container_name: ecp-api
     volumes:
@@ -35,6 +35,7 @@ services:
     command: yarn run start
 
   client-server:
+    env_file: ./deploy/.env_dev
     environment:
       - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
     build:
