--- a/packages/nginx/Dockerfile
+++ b/packages/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:latest
 
 COPY --from=billxiong/ecp-app /home/node/ecp-app/dist /etc/nginx/html
-COPY ./nginx-local.template /etc/nginx/conf.d/nginx.conf
+COPY ./nginx-local.template /etc/nginx/nginx.conf
 
 RUN rm /etc/nginx/conf.d/default.conf
 
