--- a/packages/ecp-app/package.json
+++ b/packages/ecp-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "start": "cp deploy/.env_dev .env && vue-cli-service serve",
+    "start": "cp ../../deploy/.env_dev .env && vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "echo \"Everything gonna be okay\"",
     "lint": "vue-cli-service lint",
