--- a/deploy/.env_prod
+++ b/deploy/.env_prod
@@ -4,12 +4,12 @@ VUE_APP_NAME=ecp-app
 HOST=0.0.0.0
 PORT=6002
 BASE_URL=/
-VUE_APP_DOMAIN=localhost
+VUE_APP_DOMAIN=172.96.192.149
 VUE_APP_SERVER_URL=http://localhost:6002/ecp
-VUE_APP_BROKER_URL=ws://localhost:6033
+VUE_APP_BROKER_URL=ws://172.96.192.149:3033
 VUE_APP_CLIENT_URL=http://localhost:6002
-VUE_APP_API_URL=http://localhost:6033/rest/v1
+VUE_APP_API_URL=http://172.96.192.149:3033/rest/v1
 VUE_APP_LOGGER_LEVEL=4
-API_SERVER_PORT=6033
+API_SERVER_PORT=3033
 NGINX_HTTP_SERVER_PORT=7077
 GIT_REPO_SSH_URL=
