--- a/packages/ecp-app/package.json
+++ b/packages/ecp-app/package.json
@@ -21,7 +21,7 @@
     "uid": "0.0.2",
     "vue": "^2.6.10",
     "vue-croppie": "^2.0.1",
-    "vue-router": "^3.1.3",
+    "vue-router": "3.0.7",
     "vuex": "^3.0.1",
     "vuex-cache": "^3.1.0",
     "vuex-persist": "^2.1.0"
