--- a/packages/ecp-app/package.json
+++ b/packages/ecp-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "lodash.get": "^4.4.2",
