--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   client:
-    env_file: ./deploy/.env_prod
+    env_file: ./deploy/.env_dev
     build:
       context: ./packages/ecp-app
       dockerfile: Dockerfile
@@ -17,10 +17,10 @@ services:
     image: billxiong/ecp-app
     container_name: ecp-app
     volumes:
-      - ./deploy/.env_prod:/home/node/ecp-app/.env:ro
+      - ./deploy/.env_dev:/home/node/ecp-app/.env:ro
 
   api:
-    env_file: ./deploy/.env_prod
+    env_file: ./deploy/.env_dev
     build:
       context: ./packages/ecp-api
       dockerfile: Dockerfile
@@ -31,11 +31,11 @@ services:
     image: billxiong/ecp-api
     container_name: ecp-api
     volumes:
-      - ./deploy/.env_prod:/home/node/ecp-api/.env:ro
+      - ./deploy/.env_dev:/home/node/ecp-api/.env:ro
     command: yarn run start
 
   client-server:
-    env_file: ./deploy/.env_prod
+    env_file: ./deploy/.env_dev
     environment:
       - NGINX_HTTP_SERVER_PORT=${NGINX_HTTP_SERVER_PORT}
     build:
