Modify docker files.

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start:api": "cp deploy/.env_dev .env && yarn workspace ecp-api start:dev",
     "lint:fix": "yarn workspace ecp-app lint:fix",
     "build:app": "yarn workspace ecp-app build",
-    "build:docker": "cp deploy/.env_prod .env && docker-compose build",
-    "start:docker": "cp deploy/.env_prod .env && docker-compose up -d",
-    "stop:docker": "docker-compose down"
+    "build:docker": "cp deploy/.env_prod .env && docker-compose -f docker-compose.dev.yml build",
+    "start:docker": "cp deploy/.env_prod .env && docker-compose -f docker-compose.dev.yml up -d",
+    "stop:docker": "docker-compose -f docker-compose.dev.yml down"
   },
   "devDependencies": {
     "lerna": "^3.19.0"
