modify docker composes, build scripts, router and api...

--- a/deploy/.env_prod
+++ b/deploy/.env_prod
@@ -10,6 +10,7 @@ VUE_APP_BROKER_URL=ws://39.98.107.107:3055
 VUE_APP_CLIENT_URL=http://localhost:6002
 VUE_APP_API_URL=http://39.98.107.107:3055/rest/v1
 VUE_APP_LOGGER_LEVEL=4
+VUE_APP_SHOW_GLOBAL_UI=false
 API_SERVER_PORT=3055
 NGINX_HTTP_SERVER_PORT=3077
 GIT_REPO_SSH_URL=
