--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "cp deploy/.env_dev .env && yarn workspace ecp-app start",
+    "start:dev": "yarn workspace ecp-app start:dev",
+    "start:static": "yarn workspace ecp-app start:static",
     "start:api": "cp deploy/.env_dev .env && yarn workspace ecp-api start:dev",
     "lint:fix": "yarn workspace ecp-app lint:fix",
     "build:app": "yarn workspace ecp-app build",
